ex3/testdata/typechecker/ok/MethodInvokeTest2.java
class MainClass{
    public static void main(String[] args){
        int a;
        boolean c;
        b = new Blub();
        b.blah();
        new Blub();
        b.bleh(4);
    }
}
